--- a/index.html
+++ b/index.html
@@ -1,1 +1,236 @@
-<h1>Hello world! </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VenomBraggard Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
+    
+</head>
+    <body>
+
+<div class="container">
+    <video class="back-vid" autoplay muted plays-inline loop
+    src="/videos/galaxy.mp4" type="video/mp4"></video>
+
+    <header>
+        <div class="left">
+            <img src="images/Venom_Braggard.png" alt="logo">
+            <h1> <span style="color: #72a1de;">Venom</span>Braggard</h1>
+        </div>
+
+        <ul>
+            <li><a href="/index.html">About</a></li>
+            <li><a href="#Skills">Skills</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">CV</a></li>
+
+        </ul>
+
+        <div class="box-icons">
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://x.com/VBraggard" target="_blank" ><i class='bx bxl-twitter'></i></a>
+            <a href="https://tryhackme.com/p/venombraggard" target="_blank" ><i class='bx bx-signal-5' ></i></a>
+            <a href="https://github.com/venombraggard" target="_blank" ><i class='bx bxl-github'></i></a>
+
+        </div>
+
+    </header>
+
+  <!--<div class="blackhole-box">
+        <video loop autoplay muted plays-inline src="/videos/blackhole.mp4" type="video/mp4" ></video>
+    </div> -->
+
+    <section class="hero">
+        <div class="hero-info">
+            <div class="hero-info-title">
+                <i class='bx bxl-react'></i>
+                Cybersec user Portfolio
+            </div>
+
+                <h1 id="Contact">Interested in <span class="gradient">building</span> an <span class="gradient">Engineer</span> knowledge</h1>
+
+                <p>Junior Developer with Experience in Cybersecurity and Mobile
+                    development. Check out the below section to see more.</p>
+
+                <button><i class='bx bxs-send' ></i> Contact Me</button>
+        </div>
+
+        <!--<div class="hero-vid-box">
+            <video autoplay loop muted plays-inline src="videos/hero-video.mp4" 
+            type="video/mp4"></video>
+        </div>-->
+
+
+        <div class="scroll-down"></div>
+    </section>
+
+
+
+    <section class="info-section">
+        <h1><div class="section-title">Hello 💻 </div></h1>
+        <div class="info-cards">
+            <div class="card">
+                            <h1>Hi, I'm Rayan </h1>
+                            <p>With 1 year of Experience, i have honed my skills in both Cybersecurity
+                                and Mobile Development.</p>
+                                <img src="/images/gridiff.png" alt="card-image">
+            </div>
+
+            <div class="card">
+                            <h1>Tech Stack </h1>
+                            <p>I specialize in various languages, frameworks, and tools, such as C, C++,
+                                React Native, Javascript, TypeScript, Wireshark, Burp Suite...
+                            </p>
+                                <img src="/images/gridmodif2.png" alt="card-image">
+            </div>
+
+
+            <div class="card">
+
+                <h1>Location</h1>
+                <p>Based in France, Paris and open to any opportunity to improve my technical skills.</p>
+                <video autoplay loop muted plays-inline src="/videos/glob.mp4" type="video/mp4"></video>
+
+
+                <button><i class='bx bx-link-external' ></i>Contact Me</button>
+
+            </div>
+
+
+            <div class="card">
+
+                <h1>Build things </h1>
+                <p>I woudl like to become a profesional at developing software</p>
+                <img src="/images/grid4.png" alt="card-image">
+
+            </div>
+        </div>
+</section>
+
+<section id="Projects" class="my-projects">
+    <section class="my-projects">
+        <h1 class="section-title">My Projects 👨‍💻</h1>
+        <div class="project-card">
+            <div class="project-vidbox">
+                <video id="projectVideo1" src="/videos/project1.mp4"></video>
+                <div class="hover-sign"></div>
+            </div>
+
+
+            <div class="project-info">
+                <h1><span class="gradient">React</span> Native <span class="gradient">App 1</span></h1>
+                <p>Soon</p>
+
+                    <button><i class='bx bx-link-external'></i>Website</button>
+            </div>
+
+        </div>
+
+
+        <div class="project-card">
+            <div class="project-vidbox">
+                <video id="projectVideo2" src="/videos/project1.mp4"></video>
+            </div>
+
+
+            <div class="project-info">
+                <h1><span class="gradient">Projet</span> à <span class="gradient">venir</span></h1>
+                <p>Fubuki Shirou (吹雪ふぶき 士郎しろう, Fubuki Shirō) is one of the main protagonists of the original Inazuma Eleven series. 
+                    First introduced in Inazuma Eleven 2: Kyoui no Shinryakusha, he initially played 
+                    as both a defender and forward.</p>
+
+                    <button><i class='bx bx-link-external'></i>Website</button>
+            </div>
+
+        </div>
+
+        <div class="project-card">
+            <div class="project-vidbox">
+                <video id="projectVideo3" src="/videos/project2.mp4"></video>
+            </div>
+
+
+            <div class="project-info">
+                <h1><span class="gradient">Portfolio</span>  <span class="gradient">Website</span></h1>
+                <p>Fubuki Shirou (吹雪ふぶき 士郎しろう, Fubuki Shirō) is one of the main protagonists of the original Inazuma Eleven series. 
+                    First introduced in Inazuma Eleven 2: Kyoui no Shinryakusha, he initially played 
+                    as both a defender and forward.</p>
+
+                <button><i class='bx bx-link-external'></i>Website</button>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- <section class="skills-section">
+        <h1 class="section-title">
+            My Skills 💪
+        </h1>
+
+        <div class="skills-box sk">
+            <img src="/images/digital brain.png" alt="skills-image">
+
+            <div class="designer">
+                <h1 class="gradient">Junior Cybersecurity Analyst<i class='bx bxl-visual-studi'></h1>
+                <p>I'm skilled in JavaScript, TypeScript, React as a framework. Developing mobile app that are useful to me.
+                     I do not rely on motivation to do the things that I do.
+                </p>
+            </div>
+
+            <div class="coder">
+                <h1 class="gradient">Programmer<i class='bx bx-lapto'></i></h1>
+                <p>I have expertise in analysing packets on a network and troubleshoot problems on it. I know 
+                    structures of database managements as Cybersecurity analyst. I'm improving at any moment.</p>
+            </div>
+
+
+        </div>
+    </section> -->
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="app.js"></script>
+    </body>
+</html>
